# Images-Classification

./: CMakeLists.txt  README.md  filtre.cpp  filtre.h  in1.ppm  main.cpp  neuronmath.cpp  neuronmath.h  pgmimg.cpp  pgmimg.h  ppmimg.cpp  ppmimg.h  test.cpp  test.h  test.ppm  trainer.cpp  trainer.h
tum/kirsch/: tum1.ppm  tum10.ppm  tum100.ppm  tum101.ppm  tum102.ppm  tum103.ppm  tum104.ppm  tum105.ppm  tum106.ppm  tum107.ppm  tum108.ppm  tum109.ppm  tum11.ppm  tum110.ppm  tum111.ppm  tum112.ppm  tum113.ppm  tum114.ppm  tum115.ppm  tum116.ppm  tum117.ppm  tum118.ppm  tum119.ppm  tum12.ppm  tum120.ppm  tum121.ppm  tum122.ppm  tum123.ppm  tum124.ppm  tum125.ppm  tum126.ppm  tum127.ppm  tum128.ppm  tum129.ppm  tum13.ppm  tum130.ppm  tum131.ppm  tum132.ppm  tum133.ppm  tum134.ppm  (+250 more)
tum/prewitt/: tum1.ppm  tum10.ppm  tum100.ppm  tum101.ppm  tum102.ppm  tum103.ppm  tum104.ppm  tum105.ppm  tum106.ppm  tum107.ppm  tum108.ppm  tum109.ppm  tum11.ppm  tum110.ppm  tum111.ppm  tum112.ppm  tum113.ppm  tum114.ppm  tum115.ppm  tum116.ppm  tum117.ppm  tum118.ppm  tum119.ppm  tum12.ppm  tum120.ppm  tum121.ppm  tum122.ppm  tum123.ppm  tum124.ppm  tum125.ppm  tum126.ppm  tum127.ppm  tum128.ppm  (+257 more)
tumeur/: in1.pgm  in10.pgm  in11.pgm  in12.pgm  in13.pgm  in14.pgm  in15.pgm  in16.pgm  in17.pgm  in18.pgm  in19.pgm  in2.pgm  in20.pgm  in21.pgm  in22.pgm  in23.pgm  in24.pgm  in25.pgm  in26.pgm  in27.pgm  in28.pgm  in29.pgm  in3.pgm  in30.pgm  in31.pgm  in32.pgm  in33.pgm  in34.pgm  in35.pgm  in36.pgm  in37.pgm  in38.pgm  in39.pgm  in4.pgm  in40.pgm  in41.pgm  in42.pgm  in43.pgm  in44.pgm  in45.pgm  (+30 more)
(+450 files in other folders)
